bonus/configs/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.localhost
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: argocd-server 
                port:
                  number: 80
